tests/conc/reject/chan_field.ty
struct Box:
    ch: Channel(int)
fn main():
    print("x")
